Chapitre 5 - CLI done.

--- a/Chapitre 5 - Créer un outil CLI.ipynb
+++ b/Chapitre 5 - Créer un outil CLI.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "## Commençons !\n",
     "\n",
-    "Pour créer un script, nous allons déjà créer le fichier : nous l'appelerons \"recherche.py\". Ce script nous permettra de faire des recherche sur Isidore. Dans ce but, nous lirons un peu plus tard la documentation de l'API d'[Isidore](https://isidore.science/api).\n",
+    "Pour créer un script, nous allons déjà créer le fichier : nous l'appellerons \"recherche.py\". Ce script nous permettra de faire des recherches sur Isidore. Dans ce but, nous lirons un peu plus tard la documentation de l'API d'[Isidore](https://isidore.science/api).\n",
     "\n",
     "Un bon script python prend la forme suivante : \n",
     "\n",
@@ -48,21 +48,101 @@
     "\n",
     "```python\n",
     "import click\n",
+    "import requests\n",
+    "import math\n",
+    "import csv\n",
     "\n",
-    "def parser_reponse_isidore():\n",
+    "ISIDORE = \"https://api.isidore.science/resource/search\"\n",
+    "\n",
+    "\n",
+    "def parser_reponse_isidore(data):\n",
     "    \"\"\" Fait une recherche sur Isidore\n",
+    "\n",
+    "    :param data: JSON Parsed Data\n",
+    "    :type q: dict\n",
+    "    :returns: Tuple (\n",
+    "        Nombre de Résultats,\n",
+    "        Nombre de Pages,\n",
+    "        Liste de résultat sous forme de dictionnaire {title, desc, author, date}\n",
+    "    )\n",
+    "    \"\"\"\n",
+    "    # On récupère le nombre de résultats\n",
+    "    nb_items = int(data[\"response\"][\"replies\"][\"meta\"][\"@items\"])\n",
+    "    # On récupère le nombre de résultats par page\n",
+    "    items_per_page = int(data[\"response\"][\"replies\"][\"meta\"][\"@pageItems\"])\n",
+    "    # Le nombre total de pages est l'arrondi supérieur de la division nb_items / items_per_page\n",
+    "    total_page = math.ceil(nb_items / items_per_page)\n",
+    "\n",
+    "    # On crée une liste vide dans laquelle on enregistrera les données\n",
+    "    items = []\n",
+    "    # Pour chaque réponse\n",
+    "    for item in data[\"response\"][\"replies\"][\"content\"][\"reply\"]:\n",
+    "        # On ajoute à items un nouvel objet\n",
+    "        items.append({\n",
+    "            \"uri\": item[\"@uri\"],\n",
+    "            \"title\": item[\"isidore\"][\"title\"],\n",
+    "            # dictionnaire.get(cle, valeur-par-defaut) : valeur-par-defaut est utilisée si clé n'est\n",
+    "            # pas présente\n",
+    "            \"date\": item[\"isidore\"][\"date\"].get(\"normalizedDate\", \"0000-00-00\"),\n",
+    "            \"author\": []\n",
+    "        })\n",
+    "        # Les auteurs peuvent être plusieurs : dans ce cas, on a une liste sur laquelle on bouclera\n",
+    "        # On utilise items[-1] car il s'agit du dernier item ajouté\n",
+    "        if isinstance(item[\"isidore\"][\"enrichedCreators\"][\"creator\"], list):\n",
+    "            for author in item[\"isidore\"][\"enrichedCreators\"][\"creator\"]:\n",
+    "                items[-1][\"author\"].append(author[\"@normalizedAuthor\"])\n",
+    "        else:\n",
+    "            items[-1][\"author\"].append(item[\"isidore\"][\"enrichedCreators\"][\"creator\"][\"@normalizedAuthor\"])\n",
+    "\n",
+    "        # Des fois, le titre est un dictionnaire aussi ou une liste\n",
+    "        if isinstance(items[-1][\"title\"], dict):\n",
+    "            items[-1][\"title\"] = items[-1][\"title\"][\"$\"]\n",
+    "        if isinstance(items[-1][\"title\"], list):\n",
+    "            items[-1][\"title\"] = items[-1][\"title\"][0]\n",
+    "            # Et des fois, dans cette liste de titre, on a aussi des dictionnaires...\n",
+    "            if isinstance(items[-1][\"title\"], dict):\n",
+    "                items[-1][\"title\"] = items[-1][\"title\"][\"$\"]\n",
+    "\n",
+    "    return nb_items, total_page, items, data[\"response\"][\"replies\"][\"page\"].get(\"@next\", None)\n",
+    "\n",
+    "\n",
+    "def cherche_isidore(q, full=False, page=1):\n",
+    "    \"\"\" Chercher sur isidore en faisant une requête\n",
+    "\n",
+    "    :param q: Chaine de recherche\n",
+    "    :type q: str\n",
+    "    :param full: Recherche complète (itère sur toutes les pages)\n",
+    "    :type full: bool\n",
+    "    :param page: Page à récupérer\n",
+    "    :type page: int\n",
+    "    :returns: Tuple (\n",
+    "        Nombre de Résultats,\n",
+    "        Nombre de Pages,\n",
+    "        Liste de résultat sous forme de dictionnaire {uri, title, desc, author, date}\n",
+    "    )\n",
     "    \"\"\"\n",
     "\n",
-    "def cherche_isidore():\n",
-    "    \"\"\" Chercher sur isidore en faisant une requête\n",
-    "    \"\"\"\n",
+    "    # On exécute la requête\n",
+    "    params = {\"output\": \"json\", \"q\": q, \"page\": page}\n",
+    "    req = requests.get(ISIDORE, params=params)\n",
+    "\n",
+    "    # On la parse\n",
+    "    nb_items, total_page, items, next_page = parser_reponse_isidore(req.json())\n",
+    "\n",
+    "    if full and next_page:\n",
+    "        # On la parse\n",
+    "        nb_items, total_page, new_items, next_page = cherche_isidore(q=q, full=full, page=next_page)\n",
+    "        # On ajoute chacune des valeurs d'items à total_items\n",
+    "        items.extend(new_items)\n",
+    "\n",
+    "    return nb_items, total_page, items, next_page\n",
     "    \n",
     "def run():\n",
     "    \"\"\" Commande que l'on mettra comme commande principale\n",
     "    \"\"\"\n",
     "    print(\"Commande exécutée !\")\n",
     "    \n",
-    "# Si ce fichier est le fichier executé directement par python\n",
+    "# Si ce fichier est le fichier exécuté directement par python\n",
     "# Alors on exécute la commande\n",
     "if __name__ == \"__main__\":\n",
     "    run() \n",
@@ -79,7 +159,7 @@
     "# ...\n",
     "```\n",
     "\n",
-    "La syntaxe `@click.command` est ce qu'on appelle un décorateur. C'est une fonction qui transforme la fonction définit après celle-ci. C'est une manière plus rapide d'écrire quelque chose qui ressemblerait à cela (à peu près):\n",
+    "La syntaxe `@click.command` est ce qu'on appelle un décorateur. C'est une fonction qui transforme la fonction définie après celle-ci. C'est une manière plus rapide d'écrire quelque chose qui ressemblerait à cela (à peu près):\n",
     "\n",
     "```python\n",
     "def run():\n",
@@ -88,17 +168,190 @@
     "run = click.command(run)\n",
     "```\n",
     "\n",
-    "On peut utiliser autant de décorateurs que l'on veut sur une fonction !\n",
+    "On peut utiliser autant de décorateurs que l'on veut sur une fonction ! C'est d'ailleurs ce que nous ferons.\n",
+    "Pour la suite, sachez que le contenu de documentation de la fonction `run()` sera utilisé comme message d'aide. Ainsi :\n",
+    "\n",
+    "```\n",
+    "@click.command()\n",
+    "def run(query, full, output_file):\n",
+    "    \"\"\" Exécute une recherche sur Isidore.science \n",
+    "    \"\"\"\n",
+    "```\n",
+    "\n",
+    "lors de l'exécution de `python recherche.py --help` affichera\n",
+    "\n",
+    "```shell\n",
+    "Usage: recherche.py\n",
+    "\n",
+    "  Exécute une recherche sur Isidore.science\n",
+    "\n",
+    "Options:\n",
+    "  --help                 Show this message and exit.\n",
+    "```\n",
     "\n",
     "## Paramètre\n",
     "\n",
+    "Notre fonction de recherche pour l'instant est particulièrement pauvre. Nous allons donc ajouter un paramètre obligatoire, appelé `argument` dans click.\n",
+    "\n",
+    "```python\n",
+    "@click.command()\n",
+    "@click.argument(\"query\", type=str)\n",
+    "def run(query):\n",
+    "    \"\"\" Exécute une recherche sur Isidore.science en utilisant [QUERY]\n",
+    "    \"\"\"\n",
+    "    nb_items, total_page, items, next_page = cherche_isidore(query)\n",
+    "    print(\"Nombre de résultats : {}\".format(nb_items))\n",
+    "    print(\"Nombre de résultats affichés : {}\".format(len(items)))\n",
+    "    for item in items:\n",
+    "        print(\"{}; {}\".format(item[\"title\"], \"& \".join(item[\"author\"])))\n",
+    "```\n",
+    "\n",
+    "et on pourra désormais exécuter `python recherche.py \"Groupe Manouchian\"` !\n",
+    "\n",
+    "### Que remarque-t-on ?\n",
+    "\n",
+    "1. L'argument se place après la déclaration de commande, en décorateur\n",
+    "2. Le nom de l'argument correspond au paramètre de la fonction.\n",
+    "3. On peut forcer un type : ici, une chaîne de caractère.\n",
+    "\n",
+    "\n",
     "## Option\n",
+    "\n",
+    "```python\n",
+    "@click.command()\n",
+    "@click.argument(\"query\", type=str)\n",
+    "@click.option(\"-f\", \"--full\",  is_flag=True, default=False,\n",
+    "              help=\"Browse every page of results\")\n",
+    "def run(query, full):\n",
+    "    \"\"\" Exécute une recherche sur Isidore.science en utilisant [QUERY]\n",
+    "    \"\"\"\n",
+    "    nb_items, total_page, items, next_page = cherche_isidore(query, full=full)\n",
+    "    print(\"Nombre de résultats : {}\".format(nb_items))\n",
+    "    print(\"Nombre de résultats affichés : {}\".format(len(items)))\n",
+    "    for item in items:\n",
+    "        print(\"{}; {}\".format(item[\"title\"], \"& \".join(item[\"author\"])))\n",
+    "```\n",
+    "\n",
+    "et on pourra désormais exécuter `python recherche.py \"Philaenis\" --full` !\n",
+    "\n",
+    "### Que remarque-t-on ?\n",
+    "\n",
+    "1. L'option se place après la déclaration de commande, en décorateur. Elle peut arriver avant ou après un argument, mais ordonner de l'obligatoire à l'optionnel est à privilégier.\n",
+    "2. On peut décliner le nom de l'option en trois versions, à la suite : \n",
+    "    1. En nom court (une lettre, majuscule ou minuscule, précédée **d'un** tiret.): `-q`\n",
+    "    2. En nom long (plusieurs lettres, majuscules ou minuscules, précédées de **deux** tirets): `--query`\n",
+    "    3. Avec son nom de variable, qui sera passé à la fonction. Sinon, c'est la transposition du plus long de 1) et 2)\n",
+    "3. On peut forcer un type : ici, un booléen\n",
+    "4. On utilise l'option `is_flag=True` qui permet de faire la chose suivante : la présence de `--full` donnera la valeur `True` à la variable `full`. Le défaut `default=False` assure de la valeur False en cas contraire.\n",
+    "5. On peut fournir une aide pour décrire la variable : regardez le résultat de `python recherche.py --help` :\n",
+    "\n",
+    "```shell\n",
+    "Usage: isidore.py [OPTIONS] QUERY\n",
+    "\n",
+    "  Exécute une recherche sur Isidore.science en utilisant [QUERY]\n",
+    "\n",
+    "Options:\n",
+    "  -f, --full             Browse every page of results\n",
+    "  --help                 Show this message and exit.\n",
+    "```\n",
     "\n",
     "## Typage de fichier\n",
     "\n",
-    "## Ajouter de la couleur !\n",
+    "Il existe de [nombreux types dans `click`](http://click.palletsprojects.com/en/7.x/parameters/#parameter-types) dont le type `File` qui permet de gérer l'ouverture et la fermeture d'un fichier :\n",
     "\n",
-    "## Raccourci Bash"
+    "```python\n",
+    "@click.command()\n",
+    "@click.argument(\"query\", type=str)\n",
+    "@click.option(\"-f\", \"--full\",  is_flag=True, default=False,\n",
+    "              help=\"Browse every page of results\")\n",
+    "@click.option(\"-o\", \"--output\", \"output_file\", type=click.File(mode=\"w\"), default=None,\n",
+    "              help=\"File in which to write, in a CSV manner, the results\")\n",
+    "def run(query, full, output_file):\n",
+    "    \"\"\" Exécute une recherche sur Isidore.science en utilisant [QUERY]\n",
+    "    \"\"\"\n",
+    "    nb_items, total_page, items, next_page = cherche_isidore(query, full=full)\n",
+    "    print(\"Nombre de résultats : {}\".format(nb_items))\n",
+    "    print(\"Nombre de résultats affichés : {}\".format(len(items)))\n",
+    "    for item in items:\n",
+    "        print(\"{}; {}\".format(item[\"title\"], \"& \".join(item[\"author\"])))\n",
+    "\n",
+    "    if output_file:\n",
+    "        writer = csv.writer(output_file)\n",
+    "        writer.writerow([\"date\", \"title\", \"author\", \"uri\"])\n",
+    "        for item in items:\n",
+    "            writer.writerow([item[\"date\"], item[\"title\"], \", \".join(item[\"author\"]), item[\"uri\"]])\n",
+    "```\n",
+    "\n",
+    "### Que remarque-t-on ?\n",
+    "\n",
+    "1. Le type de fichier `click.File` prend les mêmes modes que with `open()`.\n",
+    "2. Le fichier est déjà ouvert par `click`.\n",
+    "3. Le fichier est automatiquement fermé par `click`.\n",
+    "\n",
+    "## Groupe de commandes\n",
+    "\n",
+    "On peut aussi ajouter plusieurs commandes dans un même fichier, généralement, on utilise pour cela un groupe :\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "@click.group()\n",
+    "def group():\n",
+    "    \"\"\" Groupes de commandes pour communiquer avec Isidore\"\"\"\n",
+    "\n",
+    "\n",
+    "@group.command(\"search\")\n",
+    "@click.argument(\"query\", type=str)\n",
+    "@click.option(\"-f\", \"--full\",  is_flag=True, default=False,\n",
+    "              help=\"Browse every page of results\")\n",
+    "@click.option(\"-o\", \"--output\", \"output_file\", type=click.File(mode=\"w\"), default=None,\n",
+    "              help=\"File in which to write, in a CSV manner, the results\")\n",
+    "def run(query, full, output_file):\n",
+    "    \"\"\" Exécute une recherche sur Isidore.science en utilisant [QUERY]\n",
+    "    \"\"\"\n",
+    "    nb_items, total_page, items, next_page = cherche_isidore(query, full=full)\n",
+    "    print(\"Nombre de résultats : {}\".format(nb_items))\n",
+    "    print(\"Nombre de résultats affichés : {}\".format(len(items)))\n",
+    "    for item in items:\n",
+    "        print(\"{}; {}\".format(item[\"title\"], \"& \".join(item[\"author\"])))\n",
+    "\n",
+    "    if output_file:\n",
+    "        writer = csv.writer(output_file)\n",
+    "        writer.writerow([\"date\", \"title\", \"author\", \"uri\"])\n",
+    "        for item in items:\n",
+    "            writer.writerow([item[\"date\"], item[\"title\"], \", \".join(item[\"author\"]), item[\"uri\"]])\n",
+    "\n",
+    "\n",
+    "# Si ce fichier est le fichier exécuté directement par python\n",
+    "# Alors on exécute la commande\n",
+    "if __name__ == \"__main__\":\n",
+    "    group()\n",
+    "```\n",
+    "\n",
+    "### Que remarque-t-on ?\n",
+    "\n",
+    "1. Le groupe est créé par le décorateur `click.group()` et par une fonction au nom libre, ici `mon_groupe`\n",
+    "2. C'est désormais cette fonction qui est utilisée à la fin\n",
+    "3. La commande, précédemment sans nom, se décore désormais avec `@mon_groupe.command(\"search\")` où :\n",
+    "    1. le décorateur par de la fonction de groupe plutôt que de `click`.\n",
+    "    2. Le paramètre correspond au nom de la commande\n",
+    "    \n",
+    "On peut donc désormais faire : `python cli/isidore.py search \"Philaenis\" --full`\n",
+    "\n",
+    "## Des librairies utiles pour ce genre de CLI\n",
+    "\n",
+    "### Les couleurs\n",
+    "\n",
+    "On peut facilement ajouter des couleurs ! Les librairies telles que [colour](https://pypi.org/project/colour/) sont particulièrement adaptées.\n",
+    "\n",
+    "### Les tableaux\n",
+    "\n",
+    "On peut facilement formater des tableaux avec des librairies comme [terminaltables](https://pypi.org/project/terminaltables/)\n",
+    "\n",
+    "## Exercice\n",
+    "\n",
+    "1. Ajoutez des couleurs (n'oubliez pas d'installer les librairies !)\n",
+    "2. Ajoutez une commande qui afficherait les mots-clefs disponibles avec une recherche (cf. https://isidore.science/vocabulary/search?q=web&output=json) (Ne vous embêtez pas avec la récursivité).\n",
+    "\n"
    ]
   }
  ],
