Reworked Chapitre 8 with two subchapters

--- a/Chapitre 8.1 - Du script a l'application - Modules et Packages.ipynb
+++ b/Chapitre 8.1 - Du script a l'application - Modules et Packages.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapitre 7 - Du script à l'application - module, gestion des erreurs et recherche SQL\n",
+    "Chapitre 8.1 - Du script à l'application - Modules et Packages\n",
     "==="
    ]
   },
@@ -12,21 +12,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notre application et nos compétences ont sérieusement grossies : nous dommes désormais capables de traiter du JSON, du CSV, de récupérer des informations depuis le web mais aussi de créer notre propre application web, bien qu'elle reste simple pour le moment.\n",
+    "Notre application et nos compétences ont sérieusement grossi : nous sommes désormais capables de traiter du JSON, du CSV, de récupérer des informations depuis le web, mais aussi de créer notre propre application web, bien qu'elle reste simple pour le moment.\n",
     "\n",
-    "Cette dite application web contient désormais 39 lignes de Python pour 2 pages et un type de ressource SQL. Vous vous rendrez vite compte que la manipulation de fichiers comme celui-ci rend les choses complexes. De fait, on préfère en général divisé les fichiers pythons comme nous divisons les templates : en les incluant ou en faisant appel à eux quand nous en avons besoin.\n",
+    "Cette application web contient désormais 39 lignes de Python pour 2 pages et un type de ressource SQL. Vous vous rendrez vite compte que la manipulation de fichiers comme celui-ci rend les choses complexes. De fait, on préfère en général diviser les fichiers pythons comme nous divisons les templates : en les incluant ou en faisant appel à eux quand nous en avons besoin.\n",
     "\n",
     "## Les modules et packages\n",
     "\n",
-    "Ce découpage en python s'appelle la modularisation : il s'agit de créer des modules qui à terme forme des packages (groupe de modules) et ainsi pouvoir se retrouver dans des applications un peu plus large que 39 lignes.\n",
+    "Ce découpage en python s'appelle la modularisation : il s'agit de créer des modules qui à terme forment des packages (groupe de modules) et ainsi pouvoir se retrouver dans des applications un peu plus large que 39 lignes.\n",
     "\n",
-    "Nous avons déjà utilisés des modules. Ainsi quand on tapez\n",
+    "Nous avons déjà utilisé des modules. Ainsi quand l'on tapait\n",
     "\n",
     "```python\n",
     "from flask import Flask\n",
     "```\n",
     "\n",
-    "Nous importions depuis le module principal du package `flask` la classe `Flask` qui nous permettait de créer notre application. Un module est en fait un fichier python. Ainsi, si je crée un fichier `modeles.py` pour y ranger l'ensemble de mes modèles de données SQL (et pouvoir m'y retrouver facilement), je pourrai à terme faire `from modeles import Place` !\n",
+    "Nous importions depuis le module principal du package `flask` la classe `Flask` qui nous permettait de créer notre application. Un module est en fait un fichier python. Ainsi, si je crée un fichier `modeles.py` pour y ranger l'ensemble de mes modèles de données SQL (et pouvoir m'y retrouver facilement), je pourrais à terme faire `from modeles import Place` !\n",
     "\n",
     "Les modules peuvent comprendre tout ce que python peut faire, à savoir : \n",
     "\n",
@@ -36,7 +36,7 @@
     "\n",
     "### Créer un package, c'est simple !\n",
     "\n",
-    "La création de package est en fait extrêment simple : \n",
+    "La création de package est en fait extrêmement simple : \n",
     "\n",
     "0. On crée un fichier `run.py` qui nous permettra d'utiliser ce qui est dans gazetteer\n",
     "1. On crée un dossier : `gazetteer/` par exemple.\n",
@@ -128,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il est possible pour un package de comporter plusieurs modules, ainsi pour notre Gazetteer il est possible de diviser par exemple les modeles des routes. Pour le moment, créons cet ensemble :\n",
+    "Il est possible pour un package de comporter plusieurs modules, ainsi pour notre Gazetteer il est possible de diviser par exemple les modèles des routes. Pour le moment, créons cet ensemble :\n",
     "\n",
     "0. On crée un fichier `run.py` qui nous permettra d'utiliser ce qui est dans gazetteer\n",
     "1. On crée un dossier : `gazetteer/` par exemple.\n",
@@ -222,11 +222,11 @@
     "\n",
     "#### Problème ?\n",
     "\n",
-    "Nous rencontrons un premier problème : `mon_module` étant importé depuis deux modules (`gazetter.application` et `gazetteer.modeles`), les deux rentrent en conflit et la dernière prend le dessus. Nous avons plusieurs solutions à ce problème \n",
+    "Nous rencontrons un premier problème : `mon_module` étant importé depuis deux modules (`gazetter.application` et `gazetteer.modeles`), les deux rentrent en conflit et la dernière prend le dessus. Nous avons plusieurs solutions à ce problème. \n",
     "\n",
     "1. `from gazetteer import application` et `print(application.mon_module)` qui permet de garder le nom du sous-module\n",
-    "2. `import gazetteer.application` et `print(gazetteer.application.mon_module)` : long à écrire mais impossible d'avoir des conflits et compréhensible\n",
-    "3. `from gazetteer.application import mon_module as autre_nom` : on renomme, on perd l'information d'origine mais on reste sur un nom court.\n",
+    "2. `import gazetteer.application` et `print(gazetteer.application.mon_module)` : long à écrire, mais impossible d'avoir des conflits et compréhensible\n",
+    "3. `from gazetteer.application import mon_module as autre_nom` : on renomme, on perd l'information d'origine, mais on reste sur un nom court.\n",
     "\n",
     "Pour continuer l'exemple, on écrit un fichier `run2.py` qui reprend cette syntaxe :"
    ]
@@ -267,11 +267,11 @@
     "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
     "\n",
     "```sh\n",
-    "cd cours-pages/exemple-02\n",
+    "cd cours-packages/exemple-02\n",
     "python run2.py\n",
     "```\n",
     "\n",
-    "#### Résumé d'un packages avec plusieurs modules\n",
+    "#### Résumé d'un package avec plusieurs modules\n",
     "\n",
     "- Un package se construit avec un dossier comprenant un `__init__.py`\n",
     "- Les fichiers qui le constituent sont importables comme modules (`from package import module`)\n",
@@ -295,10 +295,10 @@
     "\n",
     "Nous avons pour l'instant fait des imports uniquement depuis l'extérieur du package vers ce package. Il est cependant possible de faire ces imports de manière relative et il est d'ailleurs conseillé de le faire dans le cadre d'une application web.\n",
     "\n",
-    "Ces imports fonctionnent alors exactement comme les imports précédent mais en utilisant la syntaxe des chemins relatifs `..` et `.` où :\n",
+    "Ces imports fonctionnent alors exactement comme les imports précédents, mais en utilisant la syntaxe des chemins relatifs `..` et `.` où :\n",
     "\n",
-    "- `.` représente le dossier courrant\n",
-    "- `..` représente le dossier parent\n",
+    "- `.` représente le dossier courant\n",
+    "- `..` représente le dossier parent.\n",
     "- `...` représente le dossier grand-parent\n",
     "- etc.\n",
     "\n",
@@ -401,17 +401,17 @@
     "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
     "\n",
     "```sh\n",
-    "cd cours-pages/exemple-02\n",
-    "python run2.py\n",
+    "cd cours-packages/exemple-03\n",
+    "python run.py\n",
     "```\n",
     "\n",
-    "#### Résumé d'un packages avec plusieurs modules\n",
+    "#### Résumé d'un package avec plusieurs modules\n",
     "\n",
     "- Un package peut avoir des sous-modules\n",
     "- Les imports relatifs se font à l'aide des `.` :\n",
-    "    - `.` représente le dossier courrant\n",
-    "    - `..` représente le dossier parent\n",
-    "    - `...` représente le dossier grand-parent\n",
+    "    - `.` représente le dossier courant\n",
+    "    - `..` représente le dossier parent.\n",
+    "    - `...` représente le dossier grand-parent.\n",
     "    - etc.\n",
     "- Depuis l'extérieur du package, on utilise l'import absolu"
    ]
@@ -436,7 +436,7 @@
     "On ouvrira un terminal, s'assurera d'être dans un environnement virtuel et on tapera depuis le dossier source\n",
     "\n",
     "```sh\n",
-    "cd cours-pages/exemple-04\n",
+    "cd cours-packages/exemple-04\n",
     "python run.py\n",
     "```\n",
     "\n",
@@ -448,7 +448,7 @@
     "app = Flask(\"Nom\", template_folder=\"templates\", static_folder=\"static\") # Valeur par défaut ici\n",
     "```\n",
     "\n",
-    "Mais en python, les dossiers relatifs sont pris depuis le fichier qui est exécuté. Hors, on exécute `run.py` et non `app.py`. Il faudrait donc écrire `./gazetteer/templates/` et `./gazetteer/static`. Mais si on change encore !\n",
+    "Mais en python, les dossiers relatifs sont pris depuis le fichier qui est exécuté. Or, on exécute `run.py` et non `app.py`. Il faudrait donc écrire `./gazetteer/templates/` et `./gazetteer/static`. Mais si on change encore !\n",
     "\n",
     "La technique vise à obtenir, via python, le chemin actuel de l'application. Il suffit pour cela d'exécuter le code suivant :"
    ]
@@ -459,8 +459,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% pycat cours-flask/exemple12/path.py\n",
-    "% run cours-flask/exemple12/path.py"
+    "%pycat cours-flask/exemple12/path.py\n",
+    "%run cours-flask/exemple12/path.py"
    ]
   },
   {
@@ -505,183 +505,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Les erreurs\n",
+    "# Schéma récapitulatif\n",
     "\n",
-    "On a souvent rencontré des erreurs. Et on en a même provoquées volontairement, par exemple, si on tentait de diviser d'obtenir un élément inexistant :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "liste = [0,1,2]\n",
-    "liste[3]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Que faire quand on a une erreur\n",
+    "## Attention\n",
     "\n",
-    "On peut éviter ignorer les erreurs en imbriquant un code dans un double bloc `try except` qui s'écrit comme un `if else` sauf que : \n",
-    "- le bloc `except` est obligatoire si un `try` est ouvert\n",
-    "- le bloc `except` n'est executé que si une erreur apparaît"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    print(liste[3])\n",
-    "except:\n",
-    "    print(\"Je me suis trompé !\")\n",
-    "    print(liste[2])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Que faire quand on veut gérer une erreur spécifique\n",
+    "Il n'est pas possible de remonter relativement jusqu'au premier module !\n",
     "\n",
-    "Il est possible de vouloir gérer des erreurs de manière différente. Par exemple, dans le code suivant, nous avons une liste qui contient des dictionnaires, on peut avoir une erreur liée à l'index utilisé (IndexError) ou une erreur liée à une clée particulière. \n",
+    "## Exemple\n",
     "\n",
-    "On fait alors suivre `except` par le nom ou les noms (séparés par des virgules) des erreurs que l'on veut gérer à part. Si une erreur ne fait pas partie des erreurs attendues, l'erreur n'est pas ignorée :"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "objets = [\n",
-    "    {\n",
-    "        \"nom\": \"R2D2\",\n",
-    "        \"prix\": 85000\n",
-    "    },\n",
-    "    {\n",
-    "        \"nom\": \"La Force\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"nom\": \"BB8\",\n",
-    "        \"prix\": 20000\n",
-    "    }\n",
-    "]\n",
+    "Vous pouvez trouver ce schéma dans cours-packages/exemple-05. Rentrez dans ce dossier puis tapez `python app`.\n",
     "\n",
-    "def convertir(index_objet, cour_credit_republicain=0.1):\n",
-    "    \"\"\" Convertit le prix d'un objet du monde de Star Wars en Trugut\n",
-    "    \n",
-    "    http://fr.starwars.wikia.com/wiki/Cr%C3%A9dit_Galactique_Standard\n",
-    "    \"\"\"\n",
-    "    try:\n",
-    "        print(\"{objet} a un prix de {credits} soit {trugut} Truguts\".format(\n",
-    "            objet=objets[index_objet][\"nom\"],\n",
-    "            credits=objets[index_objet][\"prix\"],\n",
-    "            trugut=objets[index_objet][\"prix\"]/cour_credit_republicain\n",
-    "        ))\n",
-    "        return objets[index_objet][\"prix\"]/cour_credit_republicain\n",
-    "    except IndexError:\n",
-    "        print(\"`Ce qui n'est pas dans nos collections n'existe pas`\")\n",
-    "        return None\n",
-    "    except KeyError:\n",
-    "        print(\"L'objet {} n'a pas toutes les données nécessaires\".format(index_objet))\n",
-    "        return None\n",
-    "\n",
-    "convertir(0)\n",
-    "print(\"---\")\n",
-    "convertir(1)\n",
-    "print(\"---\")\n",
-    "convertir(3)\n",
-    "print(\"---\")\n",
-    "convertir(2, 0)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Récupérer l'erreur et la relancer\n",
-    "\n",
-    "Il peut être intéressant de récupérer l'erreur et de la relance : imaginons que nous avons un bloc de gestion de données et qu'une erreur arrive après avoir déjà traîté un gros nombre de données. On pourrait alors sauvegarder ce que l'on a, puis lancer l'erreur pour faire du debuggage."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    print(liste[3])\n",
-    "except Exception as ma_variable_erreur:\n",
-    "    print(\"Je me suis trompé !\")\n",
-    "    raise ma_variable_erreur"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Lecture de code :\n",
-    "\n",
-    "- On ajoute Exception qui permet de cibler toutes les erreurs. Cela pourrait être une erreur spécifique\n",
-    "    - On stocke cette erreur via `as nom_de_variable`\n",
-    "- On fait toutes les opérations que l'on veut\n",
-    "- On utilise ensuite `raise` avec l'erreur à lancer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Important\n",
-    "\n",
-    "La gestion d'erreur ne devrait être utilisée qu'en cas de force majeur ! Elle est en effet plus consommatrice que des simples `if`-`else` : tant que vous pouvez le prévoir, tentez de couvrir votre code via des conditions et non des `try-except`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Exercice\n",
-    "\n",
-    "Le code suivant peut créer une erreur :\n",
-    "\n",
-    "```python\n",
-    "lieux = {\n",
-    "    0: {\n",
-    "        \"nom\": \"Col. Lugdunum\",\n",
-    "        \"moderne\": \"Lyon\",\n",
-    "        \"latlong\": [45.762095775, 4.822438025],\n",
-    "        \"type\": \"ville\",\n",
-    "        \"description\": \"Col. Lugdunum was a Roman military colony from 43 BC and a major center in Gaul. Marcus \"\n",
-    "                       \"Agrippa was involved in its expansion and two Roman emperors, Claudius and Caracalla, \"\n",
-    "                       \"were born there.\"\n",
-    "    },\n",
-    "    1: {\n",
-    "        \"nom\": \"Samarobriva Ambianorum\",\n",
-    "        \"moderne\": \"Amiens\",\n",
-    "        \"type\": \"ville\",\n",
-    "        \"description\": \"An ancient place, cited: BAtlas 11 C3 Samarobriva Ambianorum \",\n",
-    "        \"latlong\": [49.8936075, 2.297948]\n",
-    "    }\n",
-    "}\n",
-    "@app.route(\"/place/<int:place_id>\")\n",
-    "def lieu(place_id):\n",
-    "    return render_template(\"pages/place.html\", nom=\"Gazetteer\", lieu=lieux[place_id])\n",
-    "```\n",
-    "\n",
-    "1. Pouvez-vous dire dans quelles conditions ?\n",
-    "2. Récupérez le nom de l'erreur\n",
-    "3. Ajoutez un `try-except`\n",
-    "    4. Quel code HTTP devriez-vous rajouter ?"
+    "![Python Modules](images/PythonModules.png)"
    ]
   }
  ],
