--- a/Chapitre 9 - Premier formulaire et la recherche.ipynb
+++ b/Chapitre 9 - Premier formulaire et la recherche.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Chapitre 8 - Mon premier formulaire et la recherche\n",
+    "Chapitre 9 - Premier formulaire et la recherche \n",
     "===\n",
     "\n",
     "Nous savons désormais :\n",
@@ -21,8 +21,8 @@
     "Les éléments nécessaires à un formulaire en HTML sont :\n",
     "\n",
     "- la balise `<form />` qui doit englober l'ensemble des champs et des boutons\n",
-    "    - on spécifiera la méthode à employer pour envoyer les données (attribut `method`)\n",
-    "    - on spécifiera l'URL vers laquelle ces données sont envoyées (attribut `action`)\n",
+    "- on spécifiera la méthode à employer pour envoyer les données (attribut `method`)\n",
+    "- on spécifiera l'URL vers laquelle ces données sont envoyées (attribut `action`)\n",
     "- la balise form inclut toujours un bouton via une balise `<button type=\"submit\">Envoyer</button>`.\n",
     "- on donnera toujours un `name` aux autres inputs\n",
     "- on appréciera pour les champs de texte l'utilisation de l'attribut `placeholder` qui permet d'afficher une légende dans un champ\n",
@@ -50,9 +50,9 @@
     "\n",
     "Prenons un formulaire avec un champ `recherche`.\n",
     "\n",
-    "L'utilisation des méthodes POST ou GET a un impact visible sur les pages. En effet, **la méthode GET ajoute les informations du formulaire dans la barre URL**. Ainsi, l'utilisation d'un formulaire GET est fortement recommandé dans le cadre de formulaire de recherche. Il permettra de partager les résultats de recherche de manière simple !\n",
+    "L'utilisation des méthodes POST ou GET a un impact visible sur les pages. En effet, **la méthode GET ajoute les informations du formulaire dans la barre URL**. Ainsi, l'utilisation d'un formulaire GET est fortement recommandée dans le cadre de formulaire de recherche. Il permettra de partager les résultats de recherche de manière simple !\n",
     "\n",
-    "Au contraire, **GET est à proscrire de tout formulaire à données sensibles**, on y prèferera POST. Cela évitera d'avoir des adresses mails, ou pire, des mots de passes dans les adresses visitées. Il est en effet très simple de récupérer ce genre d'informations par des outils malicieux."
+    "Au contraire, **GET est à proscrire de tout formulaire à données sensibles**, on y préférera POST. Cela évitera d'avoir des adresses mails, ou pire, des mots de passe dans les adresses visitées. Il est en effet très simple de récupérer ce genre d'informations par des outils malicieux."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "## Un formulaire, des formulaires ?\n",
     "\n",
-    "Dans le cadre d'un site tel que le notre, on peut imaginer assez facilement :\n",
+    "Dans le cadre d'un site tel que le nôtre, on peut imaginer assez facilement :\n",
     "\n",
     "- une recherche rapide dans la barre de navigation en haut de la page\n",
     "- un grand champ de recherche sur la page d'accueil\n",
@@ -105,7 +105,7 @@
     "from flask import Flask, request\n",
     "```\n",
     "\n",
-    "Cette variable possède entre autre un attribut `args` qui fonctionne comme un dictionnaire et qui récupère les valeurs disponibles dans l'url de telle sorte que, pour l'url `http://localhost/une_page?i=0&recherche=quelque%20chose` on aura :\n",
+    "Cette variable possède entre autres un attribut `args` qui fonctionne comme un dictionnaire et qui récupère les valeurs disponibles dans l'URL de telle sorte que, pour l'URL `http://localhost/une_page?i=0&recherche=quelque%20chose` on aura :\n",
     "\n",
     "```python\n",
     "request.args == {\n",
@@ -198,9 +198,9 @@
    "source": [
     "## Multiplier les formulaires\n",
     "\n",
-    "À partir du moment où la page de réception du formulaire est déjà disponible, on peut multiplier ce formulaire. Qu'importe le nombre d'entrée, il suffit d'une seule sortie !\n",
+    "À partir du moment où la page de réception du formulaire est déjà disponible, on peut multiplier ce formulaire. Qu'importe le nombre d'entrées, il suffit d'une seule sortie !\n",
     "\n",
-    "Pour ce faire, on a créer un nouveau template `partials/recherche.html` que l'on incluera sur la page d'accueil et la page de recherche.\n",
+    "Pour ce faire, on a créé un nouveau template `partials/recherche.html` que l'on inclura sur la page d'accueil et la page de recherche.\n",
     "\n",
     "Regardez les templates de l'exemple14 puis lancez l'exemple.\n",
     "\n",
@@ -211,7 +211,11 @@
     "```sh\n",
     "cd cours-flask/exemple14\n",
     "python run.py\n",
-    "```"
+    "```\n",
+    "\n",
+    "## Aller plus loin\n",
+    "\n",
+    "Il existe une manière de bien sécuriser nos formulaires et d'en réutiliser facilement. Je vous conseille la lecture de [The Flask Mega-Tutorial Part III: Web Forms](https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-iii-web-forms)"
    ]
   }
  ],
@@ -231,7 +235,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
